[ADD] Commande /skin (force, restore, all, list), documentation technique générée automatiquement et publiée sur GitHub Pages && [UPDATE] Commandes et permissions entièrement générées depuis le code (suppression du bloc commands/permissions de plugin.yml), chaînage d'arguments enrichi pour les commandes, chat spectateur basé sur les composants de message natifs, direction vers le campement basée sur le point de réapparition && [MOVE] Menu, gestion des skins (API Mojang, application, données) et utilitaires de message/direction vers le module partagé api && [RENAME] Tâche de pause renommée en gestionnaire de pause && [REMOVE] Script de lancement autonome du bot Discord